--- a/app/src/main/res/values-port/dimens.xml
+++ b/app/src/main/res/values-port/dimens.xml
@@ -24,4 +24,8 @@
     <dimen name="activity_vertical_margin_large">48dp</dimen>
     <dimen name="list_empty_top_vertical_margin">112dp</dimen>
     <dimen name="list_empty_middle_vertical_margin">40dp</dimen>
+
+    <!-- Toolbar -->
+    <dimen name="toolbar_height">56dp</dimen>
+
 </resources>
