--- a/app/src/main/res/menu/edit_profile.xml
+++ b/app/src/main/res/menu/edit_profile.xml
@@ -20,11 +20,12 @@
 
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.reddyetwo.hashmypass.app.EditProfileActivity" >
+      xmlns:tools="http://schemas.android.com/tools"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      tools:context="com.reddyetwo.hashmypass.app.EditProfileActivity">
     <item android:id="@+id/action_delete"
         android:title="@string/action_delete"
         android:icon="@android:drawable/ic_menu_delete"
         android:orderInCategory="100"
-        android:showAsAction="always" />
+        app:showAsAction="always" />
 </menu>
