--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -62,6 +62,7 @@
                 android:id="@+id/profile_name_text"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
+                android:maxLength="30"
                 android:background="@drawable/background_edittext_material"
                 android:maxLines="1"
                 android:singleLine="true"/>
