Workaround for broken gradient drawable in API 21

--- a/app/src/main/res/drawable-v21/tutorial_background.xml
+++ b/app/src/main/res/drawable-v21/tutorial_background.xml
@@ -26,7 +26,7 @@
               android:endColor="@color/hashmypass_dark"
               android:centerX="50%"
               android:centerY="50%"
-              android:gradientRadius="360"
+              android:gradientRadius="50%p"
               android:type="radial"/>
 
 </shape>
