--- a/app/src/main/res/layout/activity_browser_integration.xml
+++ b/app/src/main/res/layout/activity_browser_integration.xml
@@ -174,6 +174,7 @@
 
                 <ImageView
                     android:id="@+id/identicon"
+                    android:contentDescription="@string/identicon"
                     android:layout_width="48dp"
                     android:layout_height="match_parent"
                     android:paddingLeft="8dp"
