--- a/app/src/main/res/layout/fragment_tutorial_intro.xml
+++ b/app/src/main/res/layout/fragment_tutorial_intro.xml
@@ -50,7 +50,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_marginLeft="48dp"
