Added missing inputType

--- a/app/src/main/res/layout/fragment_tutorial_setup.xml
+++ b/app/src/main/res/layout/fragment_tutorial_setup.xml
@@ -81,6 +81,7 @@
 
             <EditText
                 android:id="@+id/master_key_text"
+                android:inputType="text"
                 android:enabled="false"
                 android:focusable="false"
                 android:fontFamily="sans-serif"
