--- a/app/src/main/res/layout/activity_browser_integration.xml
+++ b/app/src/main/res/layout/activity_browser_integration.xml
@@ -143,8 +143,7 @@
                 android:layout_height="48dp"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_below="@+id/tag_layout">
+                android:layout_marginRight="@dimen/activity_horizontal_margin">
 
                 <ImageView
                     android:id="@+id/ic_key"
