Use sp instead of dp for text size

--- a/app/src/main/res/layout/toolbar_spinner_item_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_spinner_item_actionbar.xml
@@ -14,6 +14,6 @@
         android:paddingLeft="16dp"
         android:paddingRight="4dp"
         android:textColor="#ffffffff"
-        android:textSize="18dp"/>
+        android:textSize="18sp"/>
 
 </LinearLayout>
