Remove unused LinearLayout

--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -24,13 +24,7 @@
               android:layout_marginTop="@dimen/activity_vertical_margin"
               android:gravity="center"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+              android:layout_height="wrap_content">
 
         <RelativeLayout
             android:id="@+id/tag_layout"
@@ -135,6 +129,4 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
             android:layout_height="48dp"/>
-    </LinearLayout>
-
 </LinearLayout>
