--- a/app/src/main/res/layout/activity_browser_integration.xml
+++ b/app/src/main/res/layout/activity_browser_integration.xml
@@ -21,6 +21,7 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_marginTop="@dimen/activity_vertical_margin"
               android:gravity="center"
@@ -169,7 +170,8 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/background_edittext_material"
                     android:imeOptions="actionDone"
-                    android:hint="@string/master_key"/>
+                    android:hint="@string/master_key"
+                    tools:ignore="UnusedAttribute"/>
 
                 <ImageView
                     android:id="@+id/identicon"
