--- a/app/src/main/res/layout/dialog_about.xml
+++ b/app/src/main/res/layout/dialog_about.xml
@@ -20,7 +20,8 @@
     -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:showDividers="middle">
@@ -35,7 +36,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        tools:ignore="UnusedAttribute"/>
 
     <ScrollView android:layout_width="match_parent"
         android:layout_height="0dp"
