--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -20,6 +20,7 @@
     -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_marginTop="@dimen/activity_vertical_margin"
               android:gravity="center"
@@ -108,7 +109,8 @@
                 android:background="@drawable/background_edittext_material"
                 android:textSize="@dimen/text_input"
                 android:imeOptions="actionDone"
-                android:hint="@string/master_key"/>
+                android:hint="@string/master_key"
+                tools:ignore="UnusedAttribute"/>
 
             <ImageView
                 android:id="@+id/identicon"
