--- a/app/src/main/res/layout/fragment_tutorial_setup.xml
+++ b/app/src/main/res/layout/fragment_tutorial_setup.xml
@@ -20,6 +20,7 @@
     -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:fillViewport="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -41,7 +42,8 @@
             android:textColor="@android:color/white"
             android:fontFamily="sans-serif-light"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:ignore="UnusedAttribute"/>
 
         <TextView
             android:text="@string/tutorial_setup_content_1"
