--- a/app/src/main/res/layout/tag_list_item.xml
+++ b/app/src/main/res/layout/tag_list_item.xml
@@ -20,6 +20,7 @@
     -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:background="@drawable/background_tag_list"
@@ -43,5 +44,6 @@
         android:text="@string/tag"
         android:gravity="left|center_vertical"
         android:textSize="@dimen/text_medium"
-        android:layout_height="48dp"/>
+        android:layout_height="48dp"
+        tools:ignore="UnusedAttribute"/>
 </LinearLayout>
