--- a/app/src/main/res/layout/toolbar_spinner_item_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_spinner_item_actionbar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -14,6 +15,7 @@
         android:paddingLeft="16dp"
         android:paddingRight="4dp"
         android:textColor="#ffffffff"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        tools:ignore="UnusedAttribute"/>
 
 </LinearLayout>
