--- a/app/src/main/res/layout/tag_list_item.xml
+++ b/app/src/main/res/layout/tag_list_item.xml
@@ -22,8 +22,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
+              android:background="?android:attr/selectableItemBackground"
               android:layout_width="match_parent"
-              android:background="@drawable/background_tag_list"
               android:layout_height="48dp">
 
     <TextView
