--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,12 +88,13 @@
 
         </LinearLayout>
 
-        <com.reddyetwo.hashmypass.app.util.Fab
-            android:id="@+id/fabbutton"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="16dp"/>
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:src="@drawable/ic_action_add"
+            app:fab_colorNormal="@color/color_palette_1"
+            android:layout_margin="16dp" />
     </FrameLayout>
 </RelativeLayout>
