--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -29,7 +29,7 @@
         <item>4 hours</item>
     </string-array>
 
-    <string-array name="RememberMasterKeyEntryValues">
+    <string-array name="RememberMasterKeyEntryValues" translatable="false">
         <item>0</item>
         <item>5</item>
         <item>30</item>
